--- a/MyProject/Site.Mobile.Master
+++ b/MyProject/Site.Mobile.Master
@@ -93,8 +93,8 @@
                     <!-- Desktop Menu -->
                     <div class="hidden md:flex items-center space-x-8">
                         <a class="text-gray-700 hover:text-primary font-medium transition duration-150" runat="server" href="~/Default.aspx">ပင်မစာမျက်နှာ</a>
-                        <a class="text-gray-700 hover:text-primary font-medium transition duration-150" runat="server" href="~/Donate">လှူဒါန်းလိုပါကဆက်သွယ်ရန်</a>
-                        <a class="text-gray-700 hover:text-primary font-medium transition duration-150" runat="server" href="~/Contact">အကြံပြုစာများအားဖတ်ရန်</a>
+                        <a class="text-gray-700 hover:text-primary font-medium transition duration-150" runat="server" href="~/LeaderList.aspx">လှူဒါန်းလိုပါကဆက်သွယ်ရန်</a>
+                        <a class="text-gray-700 hover:text-primary font-medium transition duration-150" runat="server" href="~/SuggestionList.apx">အကြံပြုစာများအားဖတ်ရန်</a>
                     </div>
 
                     <!-- Mobile menu button -->
@@ -112,8 +112,8 @@
                 <div id="mobile-menu" class="mobile-menu hidden md:hidden pb-4">
                     <div class="flex flex-col space-y-3">
                         <a class="text-gray-700 hover:text-primary font-medium py-2 transition duration-150" runat="server" href="~/">ပင်မစာမျက်နှာ</a>
-                        <a class="text-gray-700 hover:text-primary font-medium py-2 transition duration-150" runat="server" href="~/Donate">လှူဒါန်းလိုပါကဆက်သွယ်ရန်</a>
-                        <a class="text-gray-700 hover:text-primary font-medium py-2 transition duration-150" runat="server" href="~/Contact">အကြံပြုစာရေးသားရန်</a>
+                        <a class="text-gray-700 hover:text-primary font-medium py-2 transition duration-150" runat="server" href="~/LeaderList.aspx">လှူဒါန်းလိုပါကဆက်သွယ်ရန်</a>
+                        <a class="text-gray-700 hover:text-primary font-medium py-2 transition duration-150" runat="server" href="~/SuggestionList.aspx">အကြံပြုစာများအားဖတ်ရန်</a>
                     </div>
                 </div>
             </div>
